--- a/contract_one/package.json
+++ b/contract_one/package.json
@@ -6,8 +6,13 @@
     "@swc/core": "^1.5.5",
     "@ton-community/func-js": "^0.7.0",
     "@ton/core": "^0.56.3",
-    "@types/node": "^20.12.11",
     "@ton/crypto": "^3.2.0",
+    "@ton/sandbox": "^0.19.0",
+    "@ton/ton": "^13.11.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
