--- a/contract_one/package.json
+++ b/contract_one/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@swc/core": "^1.5.5",
     "@ton-community/func-js": "^0.7.0",
+    "@ton-community/sandbox": "^0.11.0",
     "@ton/core": "^0.56.3",
     "@ton/crypto": "^3.2.0",
     "@ton/sandbox": "^0.19.0",
