--- a/contract_one/package.json
+++ b/contract_one/package.json
@@ -9,6 +9,7 @@
     "@ton/core": "^0.56.3",
     "@ton/crypto": "^3.2.0",
     "@ton/sandbox": "^0.19.0",
+    "@ton/test-utils": "^0.4.2",
     "@ton/ton": "^13.11.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.11",
