--- a/contract_one/package.json
+++ b/contract_one/package.json
@@ -13,13 +13,18 @@
     "@ton/ton": "^13.11.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.11",
+    "@types/qrcode-terminal": "^0.12.2",
+    "@types/qs": "^6.9.15",
     "jest": "^29.7.0",
+    "qrcode-terminal": "^0.12.0",
+    "qs": "^6.12.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "scripts": {
     "compile": "ts-node ./scripts/compile.ts",
-    "test": "yarn jest"
+    "test": "yarn compile && yarn jest",
+    "deploy:testnet": "yarn compile && ts-node ./scripts/deploy.ts"
   }
 }
