--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "CryptoWives.ton",
   "name": "Crypto Wives",
-  "iconUrl": "https://fbf8-77-222-225-220.ngrok-free.app/images/appLogo.svg"
+  "iconUrl": "https://raw.githubusercontent.com/witchers-code/ton-func-contracts/main/appLogo.svg"
 }
