--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "CryptoWives.ton",
-  "name": "Crypto Wives",
-  "iconUrl": "https://raw.githubusercontent.com/witchers-code/ton-func-contracts/main/avatarMilk.png"
+  "url": "https://cryptomodels.ton",
+  "name": "Crypto Models",
+  "iconUrl": "https://playwithwife.com/images/appLogo.jpg"
 }
